[package]
name = "apitesting"
version = "0.1.0"
edition = "2024"

[dependencies]
env_logger = "0.11.9"
reqwest = { version = "0.13.2" , features = ["blocking"] }
serde = { version = "1.0.228", features = ["derive"] }
serde-query = "0.2.0"
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
toml = "1.0.3"
